fixed dropbox hover issue on firefox

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/feed.less
@@ -743,8 +743,8 @@
         }
 
 
-        .dropbox {
-            &:hover {
+        .dropbox:hover {
+            md-icon {
                 fill: @dropboxColor;
             }
         }
